fixed all spacing on the homepage

--- a/src/styles/_utilities.scss
+++ b/src/styles/_utilities.scss
@@ -74,6 +74,12 @@
     }
 }
 
+.align {
+    &--center {
+        align-items: center;
+    }
+}
+
 // -------------------------------------- COLOR -------------------------------------- //
 
 .bg {
