--- a/src/styles/eyes.scss
+++ b/src/styles/eyes.scss
@@ -1,35 +1,31 @@
 @import '../styles/_variables.scss'; 
 
 .eyes {
-
-  
-    .eye {
+    @media screen and (max-width: 350px) {
       display: none;
+    }
+    .eye {
       background: white;
       border-radius: 50%;
       overflow: hidden;
       width: 30px;
       height: 30px;
       @media screen and (min-width: 351px) and (max-width: $break--tblt) {
-        display: block;
         border: 3px solid $blue;
         height: calc(30px + (50 - 30) * ((100vw - 351px) / (768 - 351)));
         width: calc(30px + (50 - 30) * ((100vw - 351px) / (768 - 351)));
       }
       @media screen and (min-width: $break--tblt) and (max-width: $break--dsktp--lg){
-        display: block;
         border: 5px solid $blue;
         height: calc(50px + (80 - 50) * ((100vw - 768px) / (1440 - 768)));
         width: calc(50px + (80 - 50) * ((100vw - 768px) / (1440 - 768)));
       }
       @media screen and (min-width: $break--dsktp--lg) {
-        display: block;
         border: 8px solid $blue;
         height: calc(80px + (160 - 80) * ((100vw - 1440px) / (2000 - 1440)));
         width: calc(80px + (160 - 80) * ((100vw - 1440px) / (2000 - 1440)));
       }
 
-      
       .pupil {
         background: $blue;
         border-radius: 50%;
